# einblick

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  sqlscout_results.md
.claude-plugin/: plugin.json
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml  test.yml
commands/: einblick.md  sqlscout.md
docs/: dbt-integration.md
hooks/: hooks.json
hooks/scripts/: check-setup.sh  install.sh
sample_data/: analysis_output.json  analysis_output.md  generate.py  query_history.json
scripts/: pyproject.toml
scripts/src/einblick/: aggregator.py  cli.py  config.py  connector.py  dbt_context.py  dbt_discovery.py  dbt_proposals.py  extractor.py  fingerprinter.py  history.py  log.py  models.py  redact.py  reporter.py  slack.py
scripts/src/sqlscout/: aggregator.py  atomic_io.py  cli.py  config.py  connector.py  dbt_context.py  dbt_discovery.py  dbt_proposals.py  extractor.py  fingerprinter.py  history.py  log.py  models.py  reporter.py  slack.py  warehouse.py
scripts/tests/: test_aggregator.py  test_cli.py  test_cli_rerun.py  test_config.py  test_connector.py  test_databricks_live.py  test_dbt_context.py  test_dbt_discovery.py  test_dbt_proposals.py  test_e2e_sample.py  test_extractor.py  test_fingerprinter.py  test_history.py  test_llm_live.py  test_motherduck.py  test_motherduck_live.py  test_reporter.py  test_scenarios.py  test_slack.py  test_warehouse.py
skills/einblick-analysis/: SKILL.md
skills/einblick-analysis/references/: analysis-prompt.md  (+1 more)
skills/sqlscout-analysis/: SKILL.md
(+1 files in other folders)
